<resources>
    <string name="app_name">供水服务</string>
    <string name="copyright">&#064;copyright 2018 - 供水总公司</string>

    <string name="loading_update">正在读取版本信息......</string>
    <string name="loading_customer_info">正在读取用户信息......</string>

    <string name="login">登录</string>
    <string name="login_waitting">登陆中...请等待</string>
    <string name="verify_code">验证码</string>
    <string name="send_verify_code">发送验证</string>
    <string name="sending_verify_code">发送中...</string>
    <string name="phone_required">请输入正确的电话号码</string>
    <string name="verify_code_required">需要验证码</string>

    <string name="no_alipay">没有安装支付宝App</string>
    <string name="no_weixin">没有安装微信App</string>
    <string name="logout">注销</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="menu_home">首页</string>
    <string name="menu_query">用水</string>
    <string name="menu_report">报修</string>
    <string name="menu_site">压力</string>
    <string name="menu_notification">公告</string>

    <!-- home fragment -->
    <string name="customer_no">编号</string>
    <string name="customer_name">姓名</string>
    <string name="customer_phone">电话</string>
    <string name="customer_address">地址</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="content_description"></string>
    <string name="value_none">-</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="current_location">当前：</string>
    <string name="current_location_name">当前位置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_bank_payment">银行缴费方式</string>
    <string name="home_signed_payment">签约缴费方式</string>
    <string name="home_other_payment">其它方式</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
