<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.bdwater.waterservice.main.HomeFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/customerAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_user_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/customer_name"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/customerNo" />

    <TextView
        android:id="@+id/customerNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/customer_no"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/customerNoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/value_none"
        app:layout_constraintStart_toEndOf="@+id/customerNo"
        app:layout_constraintTop_toTopOf="@+id/customerNo" />

    <TextView
        android:id="@+id/customerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/value_none"
        app:layout_constraintStart_toEndOf="@+id/customerName"
        app:layout_constraintTop_toTopOf="@+id/customerName" />

    <TextView
        android:id="@+id/customerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/customer_phone"
        app:layout_constraintStart_toEndOf="@+id/phoneImageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/customerPhoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/value_none"
        app:layout_constraintStart_toEndOf="@+id/customerPhone"
        app:layout_constraintTop_toTopOf="@+id/customerPhone" />

    <TextView
        android:id="@+id/customerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/customer_address"
        app:layout_constraintStart_toEndOf="@+id/addressImageView"
        app:layout_constraintTop_toTopOf="@+id/addressImageView" />

    <TextView
        android:id="@+id/customerAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/value_none"
        app:layout_constraintStart_toEndOf="@+id/customerAddress"
        app:layout_constraintTop_toTopOf="@+id/customerAddress" />

    <ImageView
        android:id="@+id/phoneImageView"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/addressImageView"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_map_marker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneImageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGray"
        android:paddingBottom="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="欠费："
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/payTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text="-"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="余额："
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/depositTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text="-"
            android:textColor="@android:color/black" />

        <com.mikepenz.iconics.view.IconicsButton
            android:id="@+id/detailButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{cmd-playlist-play} 详情"/>
    </LinearLayout>

    <TextView
        android:id="@+id/bankPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_bank_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/bankPaymentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankPaymentTextView">

        <com.mikepenz.iconics.view.IconicsButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{cmd_bank} 银行" />
    </LinearLayout>

    <TextView
        android:id="@+id/otherPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_other_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankPaymentLinearLayout" />

    <LinearLayout
        android:id="@+id/otherPaymentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherPaymentTextView">
        <com.mikepenz.iconics.view.IconicsButton
            android:id="@+id/weixinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="微信"/>
        <com.mikepenz.iconics.view.IconicsButton
            android:id="@+id/alipayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="支付宝"/>
        <com.mikepenz.iconics.view.IconicsButton
            android:id="@+id/jcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="杰出便利店"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
