<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bdwater.waterservice.LoginActivity">

    <!--android:background="@color/colorPrimary"-->
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"

        android:orientation="vertical"
        android:paddingBottom="@dimen/content_paddingBottom"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight"
        android:paddingTop="@dimen/content_paddingTop">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="@dimen/marginTop"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_marginRight="@dimen/paddingRight"
            android:indeterminate="true"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_marginRight="@dimen/paddingRight"
            android:orientation="horizontal">

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                app:iiv_color="@android:color/darker_gray"
                app:iiv_icon="cmd-phone"
                app:iiv_size="16dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextAppearance="@style/Login.HintTextAppearance">

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_phone"
                    android:inputType="numberSigned"
                    android:maxLength="11"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_marginRight="@dimen/paddingRight"
            android:gravity="top"
            android:orientation="horizontal">
            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                app:iiv_color="@android:color/darker_gray"
                app:iiv_icon="cmd-key"
                app:iiv_size="16dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/verifyCodeTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_weight="1"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextAppearance="@style/Login.HintTextAppearance">

                <EditText
                    android:id="@+id/verifyCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verify_code"
                    android:inputType="numberSigned"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sendVerifyCodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Button.Light"
                android:text="@string/send_verify_code" />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLayout"
        android:layout_marginLeft="@dimen/paddingLeft"
        android:layout_marginRight="@dimen/paddingRight"
        android:layout_marginTop="@dimen/marginTop"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login"
            android:theme="@style/AppTheme.Button.Dark" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainLayout"
        android:layout_marginBottom="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginLeft"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:iiv_color="@color/colorPrimary"
            app:iiv_icon="cmd-comment-account-outline"
            app:iiv_size="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/login"
            android:textSize="@dimen/titleTextSize" />
    </LinearLayout>
</RelativeLayout>
